Don't display DONE entries.